# learn-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindVulkan.cmake  setenv.cmake  utils.cmake
doc/: TODO.md
private/scripts/: publish.ps1
public/: vk_result.json
src/: main.cc
src/lvk/: app.h  exception.cc  exception.h  fwd.h  inlines.h  lvk.cc  lvk.h  shader.cc  shader.h  utils.cc  utils.h  vk-buffer.cc  vk-buffer.h  vk-image-view.cc  vk-image-view.h  vk-image.cc  vk-image.h  window-app.cc  window-app.h
src/lvk/helpers/: helper-base.h  pipeline-create-helper.cc  pipeline-create-helper.h
src/lvk/objects/: descriptor-set-layout.cc  descriptor-set-layout.h  device.cc  device.h  glfw-window.cc  glfw-window.h  instance.cc  instance.h  physical-device.cc  physical-device.h  physical_device.cc  physical_device.h  pipeline.cc  pipeline.h  render-pass.cc  render-pass.h  surface.cc  surface.h  swapchain.cc  swapchain.h
src/lvk/wrappers/: application-info.cc  application-info.h  surface-capabilities.cc  surface-capabilities.h  traits.h
src/my/: buffer.cc  buffer.h  fs.cc  fs.h  fwd.h  type-traits.h  utils.cc  utils.h
test/: CMakeLists.txt  type.cc  utils.cc
